Mingle-00|RecreateDB now runs in process-test-classes phase. Also, removing maxpermsize vm arg for setting up seed data. <Raja|Sanchit>