@@ -752,7 +752,7 @@
                 <executions>
                     <execution>
                         <id>recreate-Db</id>
-                        <phase>pre-integration-test</phase>
+                        <phase>process-test-classes</phase>
                         <configuration>
                             <target>
                                 <echo message="Recreating DB: START"/>
@@ -777,7 +777,6 @@
                                 <echo message="Seed data loading: START"/>
                                 <property name="compile_classpath" refid="maven.compile.classpath"/>
                                 <java classname="org.motechproject.tama.tools.seed.SetupSeedData">
-                                    <jvmarg value="-XX:MaxPermSize=1024M"/>
                                     <classpath>
                                         <pathelement path="${compile_classpath}"/>
                                     </classpath>
